--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jrstrunk/budget-scraper#readme",
   "dependencies": {
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.2",
     "inquirer": "^9.1.0",
     "playwright": "^1.25.1",
